fix spelling in forum, fix news items text spilling in 700px media query

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -130,6 +130,7 @@ h2 {
   justify-content: center;
   text-align: center;
   padding-bottom: 25px;
+  height: auto;
 }
 
 .news-layout h2 {
@@ -156,11 +157,6 @@ h2 {
   padding: 15px;
 }
 
-.news-item img {
-  width: 100%;
-  border-left: 5px solid black;
-  padding-left: 5px;
-}
 .news-item a {
   width: 100%;
   font-size: 18px;
@@ -220,7 +216,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   padding: 0;
-  margin-bottom: 35px;
+  margin: 35px 0;
   align-items: center;
 }
 
@@ -317,7 +313,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   padding: 0;
-  margin-bottom: 35px;
+  margin: 35px 0;
   align-items: center;
 }
 
@@ -360,6 +356,7 @@ h2 {
   font-size: 3em;
   font-weight: 600;
   align-items: center;
+  margin: 35px 0;
 }
 
 .twitter-container h2:before, .twitter-container h2:after {
@@ -423,7 +420,9 @@ h2 {
  }
 
  .App {
-   grid-template-areas: "header header header"
+   grid-template-areas:
+   "nav nav nav"
+   "header header header"
    "news news news"
    "info info info"
    "websites websites websites"
@@ -449,9 +448,8 @@ h2 {
  }
 
  .news-item {
-   padding: 25px;
-   width: 150px;
-   height: 125px;
+   width: 200px;
+   height: 75%;
  }
 
  .news-item a {
@@ -463,7 +461,8 @@ h2 {
 /* Phone */
 @media(max-width: 700px) {
   .App {
-    grid-template-areas: "header"
+    grid-template-areas: "nav"
+    "header"
     "news"
     "info"
     "websites"
